Ajout d'une image de background, ajout d'un style pour le bouton reset, modification de la taille des chiffres

--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
 </head>
 <body>
 	<div id="countdown">
-		<h1>The Final Countdown</h1>
-		<!-- <div id="countdown-number"></div> -->
+		<h1>The Countdown</h1>
 		<div id="button-text">Start</div>
-
+	
 		<form  name="setTime">
 			<input type="text" name="days"><label for="days">d </label>
 			<input type="text" name="hours"><label for="hours">h </label>
 			<input type="text" name="minutes"><label for="minutes">m </label>
 			<input type="text" name="seconds"><label for="seconds">s</label>
-
-			<!-- <button id="start"  type="button">Start</button> -->
-			<!-- <button id="stop"  type="button">Pause</button> -->
-			<!-- <button id="resume" type="button">Reprendre</button> -->
 		</form>
+
 		<svg>
-			<circle id="start" cx="50%" cy="50%" r="35%"/>
-			<circle id="stop" cx="50%" cy="50%" r="35%"/>
-			<circle id="resume" cx="50%" cy="50%" r="35%"/>
-			<circle id="circle" cx="50%" cy="50%" r="35%"/>
+			<a href="#" onclick="return false;">
+				<circle id="start" cx="50%" cy="50%" r="40%"/>
+				<circle id="stop" cx="50%" cy="50%" r="40%"/>
+				<circle id="resume" cx="50%" cy="50%" r="40%"/>
+				<circle id="circle" cx="50%" cy="50%" r="35%"/>
+			</a>
 		</svg>
 		<button id="reset" type="button">Reset</button>
 	</div>
